--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.jpa.show-sql=true
 
 app.jwt-secret=2331485f277074522e3b72733b784e674b53682e6e7a4b347b274f533e
 #app.jwt-expiration-milliseconds=604800000
+
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
